--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,9 @@
     <string name="label_blood_oxygen">Blood Oxygen</string>
     <string name="label_heart_rate">Heart Rate</string>
     <string name="label_temperature">Temperature</string>
+    <string name="error_user_cancel_bluetooth">Error, CareLink app requires bluetooth to connect the embedding device</string>
+    <string name="error_bluetooth_not_supported">Error, bluetooth not supported</string>
+    <string name="error_bluetooth_start_fail">Error, the bluetooth cannot be started</string>
     <string name="example_text">This is an exapmle text.To be, or not to be: that is the question:Whether tis nobler in the mind to suffer.The slings and arrows of outrageous fortune.Or to take arms against a sea of troubles.And by opposing end them. To die: to sleep;.No more; and by a sleep to say we end</string>
 
 </resources>
