--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="label_blood_oxygen">Blood Oxygen</string>
     <string name="label_heart_rate">Heart Rate</string>
     <string name="label_temperature">Temperature</string>
+    <string name="label_loading">Loading</string>
     <string name="error_user_cancel_bluetooth">Error, CareLink app requires bluetooth to connect the embedding device</string>
     <string name="error_bluetooth_not_supported">Error, bluetooth not supported</string>
     <string name="error_bluetooth_start_fail">Error, the bluetooth cannot be started</string>
