--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -23,4 +23,5 @@
     <string name="data_synchronized">Synchronized!</string>
     <string name="not_connected">Not connected</string>
     <string name="reconnect">Reconnect</string>
+    <string name="click_to_view">Click to view</string>
 </resources>
