--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="refresh">refresh</string>
     <string name="no_bluetooth_permission">No bluetooth permission, please permit manually in Settings</string>
     <string name="click_to_connect">Click to connect</string>
+    <string name="click_to_view">Click to view</string>
     <string name="error_user_cancel_bluetooth">Error, CareLink app requires bluetooth to connect the embedding device</string>
     <string name="error_bluetooth_not_supported">Error, bluetooth not supported</string>
     <string name="error_bluetooth_start_fail">Error, the bluetooth cannot be started</string>
